# NeuroPlay

./: README.md  pyproject.toml
frontend/: agent.js  game.js  index.html  style.css
model/: norm_stats.json  norm_stats_chaser.json  tag_agent.onnx  tag_chaser.onnx
training/: env.py  export_onnx.py  playtest_loops.py  train.py
training/logs/: evaluations.npz
training/logs/ppo_tag_1/: events.out.tfevents.1773141804.NITHIN.64692.0
training/logs/ppo_tag_2/: events.out.tfevents.1773141979.NITHIN.38884.0
training/logs/ppo_tag_3/: events.out.tfevents.1773142668.NITHIN.6936.0
training/logs/ppo_tag_4/: events.out.tfevents.1773807740.NITHIN.30308.0
training/logs/ppo_tag_5/: events.out.tfevents.1776421927.NITHIN.12216.0
training/logs/ppo_tag_6/: events.out.tfevents.1776422098.NITHIN.28300.0
training/logs/ppo_tag_7/: events.out.tfevents.1776424645.NITHIN.25584.0
training/logs/ppo_tag_8/: events.out.tfevents.1776426430.NITHIN.16816.0
training/logs/ppo_tag_9/: events.out.tfevents.1776430279.NITHIN.5684.0
training/logs/ppo_tag_chaser_1/: events.out.tfevents.1776434570.NITHIN.15412.0
training/logs/ppo_tag_chaser_2/: events.out.tfevents.1776439712.NITHIN.31500.0
training/logs/ppo_tag_runner_1/: events.out.tfevents.1776439734.NITHIN.6640.0
training/models/: vecnormalize.pkl  vecnormalize_chaser.pkl
